--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name":            "@runbook/testrepo",
+  "name":            "@runbook/testrepo1",
   "description":     "",
   "version":         "0.1.4",
   "main":            "dist/index",
